great map redesign v23 - fix css layers and scrollbar issue

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -172,12 +172,13 @@ textarea {
   bottom:0px;
   overflow-y: auto !important;
 
+
   &.profile {
     background: $gray_gunmetal !important;
     top:50px;
   }
-  .map {
-    
+  &.map {
+    z-index:1;
   }
 }
 
